--- a/xss/production/test/3js3.html
+++ b/xss/production/test/3js3.html
@@ -13,21 +13,44 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-        <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
-        <script type="text/javascript" src="../js/jquery.utils.js"></script>
-        <script type="text/javascript" src="../js/utils.js"></script>
-        <script type="text/javascript" src="../js/prototype.js"></script>
-        <script type="text/javascript" src="../js/ms-ui.js"></script>
-        <script type="text/javascript" src="../js/ms-streamer.js"></script>
-        <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
+<script type="text/javascript" src="../js/jquery.utils.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
+var active_camera;
+var SCREEN_WIDTH = window.innerWidth;
+var SCREEN_HEIGHT = window.innerHeight;
+var g_elapsed = -1;
+var g_delta = 0.0;			
+var anim_1;
+var threejs_models = 
+        [
+        ];
+var application = {};
 		var g_sequence_manager = new ms.state.Manager();
         function default_interpolate(a, b, t)
         {
             return a + (b - a)*t;
         }
-var anim_1;
+soundRenderer = new THREE.SoundRenderer();		
+document.body.appendChild( soundRenderer.domElement );
+renderer.setSize( window.innerWidth, window.innerHeight );
+function render() {
+renderer.clear();
+var now   = new Date().getTime();
+if (g_elapsed < 0)
+    g_delta = 0; //first update
+else
+g_delta  = now - g_elapsed;  
+g_elapsed = now; 
+		g_sequence_manager.update(g_delta);
+		set_active_camera();
+}
             move_anim = Class.create(ms.state.Sequence,
         {
     initialize: function($super
@@ -65,75 +88,86 @@ var anim_1;
     },
                 target : null,
 });
-soundRenderer = new THREE.SoundRenderer();		
-document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( window.innerWidth, window.innerHeight );
-var application = {};
-function render() {
-renderer.clear();
-renderer.render( scene, camera );
-soundRenderer.render( scene, camera );
-}
 	var cylinder_material = new THREE.MeshBasicMaterial({
 	color:Math.random() * 0xffffff
 	});
 var scene = 
 new THREE.Scene(
-)
-var camera = 
+);
+var  = 
 new THREE.Camera(
-75,1.5,1,3000)
-	camera.position.z = 1000;
+75,1.5,1,3000);
+                .position.z = 1000;
 var light = 
 new THREE.DirectionalLight(
-1677)
-				;
-				scene.addLight(light);
-	light.position.y = 0.5;
-	light.position.z = 1;
-				var cylinder_1_cylinder =
+1677);
+		;
+	scene.addLight(light);
+                light.position.y = 0.5;
+                light.position.z = 1;
+	var cylinder_1_cylinder = 
 new THREE.Cylinder(
-200,100,100,500)
-				var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-				cylinder_material);
-				scene.addObject(cylinder_1);
+200,100,100,500);
+	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
+	cylinder_material);
+	scene.addObject(cylinder_1);
+                cylinder_1.rotation.x = 10;
+                cylinder_1.rotation.y = 10;
+                cylinder_1.position.x = 600;
 	document.addEventListener( 'click', click_cylinder_1, false );
 	function click_cylinder_1 (event)
 	{
 	var x = event.clientX;
 	var y = event.clientY;
 		event.preventDefault();
-		var vector = new THREE.Vector3( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1, 0.5 );
-		projector = new THREE.Projector();
-		projector.unprojectVector( vector, camera );
-		var ray = new THREE.Ray( camera.position, vector.subSelf( camera.position ).normalize() );
-		var intersects = ray.intersectObject( cylinder_1 );
+		var intersects = get_intersects( event.clientX, event.clientY, cylinder_1);
 		if ( intersects.length > 0 ) 
 		{   
 		anim_1.start();
 		}
 	};
-	cylinder_1.rotation.x = 10;
-	cylinder_1.rotation.y = 10;
-	cylinder_1.position.x = 600;
 anim_1 =
 new move_anim(
-g_sequence_manager)
+g_sequence_manager);
             anim_1.parent_sequence = null;
-	document.addEventListener( 'init', init_application, false );
-	function init_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
+application.init = function()
+{    
 		anim_1.target = cylinder_1;
 	};
+if (application.init)
+{
+	application.init();
+}
 document.body.appendChild( renderer.domElement );
 animate();
 function animate() {
 	requestAnimationFrame( animate );
-    var g_delta = 1/30.0; //fix it with real delta, in seconds
-		g_sequence_manager.update(g_delta);
-		render();
+	render();
+}
+function get_model(model_id)
+{
+		for(var i = 0; i < this.threejs_models.length; i++)
+		{
+			var model = this.threejs_models[i];
+			if (model.id == model_id)
+				return model.src;
+		}
+		return null;
+}
+function set_active_camera(camera)
+{
+	renderer.render(scene, camera);
+	soundRenderer.render(scene, camera);
+	active_camera = camera;
+}
+function get_intersects( x, y, object)
+{
+	var vector = new THREE.Vector3( ( x / window.innerWidth ) * 2 - 1, - ( y / window.innerHeight ) * 2 + 1, 0.5 );
+	projector = new THREE.Projector();
+	projector.unprojectVector( vector, active_camera );
+	var ray = new THREE.Ray( active_camera.position, vector.subSelf( active_camera.position ).normalize() );
+	var intersects = ray.intersectObject( object );
+	return intersects;
 }
 </script>
 </body>
