--- a/xss/production/test/sound.html
+++ b/xss/production/test/sound.html
@@ -4,7 +4,7 @@
 <title>Test 3D</title>
 <style type="text/css">
 	body{
-	background:#f0f0f0;
+	background:#867;
 	}
 </style>
 </head>
@@ -21,7 +21,8 @@
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
-	var renderer = new THREE.CanvasRenderer();	
+	if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
+	var renderer = new THREE.WebGLRenderer( { antialias: true } );
 var active_camera;
 var SCREEN_WIDTH = window.innerWidth;
 var SCREEN_HEIGHT = window.innerHeight;
@@ -42,79 +43,77 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_active_camera();
+		set_active_camera(camera_1);
 }
-	var cylinder_material = new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
+	var material_sphere1 = new THREE.MeshLambertMaterial({
+	color:16755200,shading:THREE.FlatShading
 	});
-	var cube_material = new THREE.MeshBasicMaterial({
-	color:Math.random() * 0xffffff
+	var material_sphere2 = new THREE.MeshLambertMaterial({
+	color:16720384,shading:THREE.FlatShading
 	});
-var sphere_material = 
-new THREE.MeshNormalMaterial(
-);
+	var material_wireframe = new THREE.MeshLambertMaterial({
+	color:16755400,wireframe:true,wireframeLinewidth:1
+	});
 var scene = 
 new THREE.Scene(
 );
-var  = 
-new THREE.Camera(
-75,1.5,1,3000);
-                .position.z = 1000;
+	var camera_1 = new THREE.QuakeCamera({
+	fov:50,aspect:1.5,near:1,far:10000,movementSpeed:70,lookSpeed:0.0500000007,noFly:true,lookVertical:false
+	});
+                camera_1.position.y = 25;
 var light = 
 new THREE.DirectionalLight(
-1677);
+16777215);
 		;
 	scene.addLight(light);
                 light.position.y = 0.5;
                 light.position.z = 1;
-	var cylinder_1_cylinder = 
-new THREE.Cylinder(
-200,100,100,500);
-	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-	cylinder_material);
-	scene.addObject(cylinder_1);
-                cylinder_1.rotation.x = 10;
-                cylinder_1.rotation.y = 10;
-                cylinder_1.position.x = 600;
-var container = 
+var container_1 = 
 new THREE.Object3D(
 );
-	var cube_1_cube = 
-new THREE.Cube(
-300,300,300);
-	var cube_1 = new THREE.Mesh(cube_1_cube,
-	cube_material);
-	scene.addObject(cube_1);
-				container.addChild(cube_1);
-				scene.addObject(container);
-                cube_1.position.x = -600;
-                cube_1.position.y = -100;
-                cube_1.rotation.x = 10;
-                cube_1.rotation.y = 10;
+                container_1.position.x = 250;
+                container_1.position.y = 30;
 	var sphere_1_sphere = 
 new THREE.Sphere(
-200,20,20);
+20,32,16);
 	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
-	sphere_material);
+	material_sphere1);
 	scene.addObject(sphere_1);
-				container.addChild(sphere_1);
-				scene.addObject(container);
-                sphere_1.position.x = -400;
-                sphere_1.position.y = 400;
-                application.foo = "qwerty";
-                application.s = 255;
-                application.hi = null;
-	application.add = function(a,b) 
-	{
-		this.s = a + b;
-	};
-	document.addEventListener( 'click', click_application, false );
-	function click_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		application.foo = application.foo + " keyboard";
-	};
+				container_1.addChild(sphere_1);
+				scene.addObject(container_1);
+var sound_1 = 
+new THREE.Sound(
+"sounds/358232_j_s_song.ogg",275,20,true);
+				container_1.addChild(sound_1);
+				scene.addObject(container_1);
+				sound_1.play();
+var container_2 = 
+new THREE.Object3D(
+);
+                container_2.position.x = -250;
+                container_2.position.y = 30;
+	var sphere_2_sphere = 
+new THREE.Sphere(
+20,32,16);
+	var sphere_2 = new THREE.Mesh(sphere_2_sphere,
+	material_sphere2);
+	scene.addObject(sphere_2);
+				container_2.addChild(sphere_2);
+				scene.addObject(container_2);
+var sound_2 = 
+new THREE.Sound(
+"sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg",275,20,true);
+				container_2.addChild(sound_2);
+				scene.addObject(container_2);
+				sound_2.play();
+	var plane_1_plane = 
+new THREE.Plane(
+1000,1000,100,100);
+	var plane_1 = new THREE.Mesh(plane_1_plane,
+	material_wireframe);
+	scene.addObject(plane_1);
+                plane_1.position.y = 0.100000001;
+                plane_1.rotation.x = -1.57;
 if (application.init)
 {
 	application.init();
