--- a/xss/production/test/transform.html
+++ b/xss/production/test/transform.html
@@ -42,7 +42,13 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_active_camera();
+		if (application.is_ctrl_down)
+{
+application.theta += application.mouse_x * 3;
+}
+camera_1.position.x = 1400 * Math.sin(application.theta * Math.PI / 360);
+camera_1.position.z = 1400 * Math.cos(application.theta * Math.PI / 360);
+		set_active_camera(camera_1);
 }
 	var cylinder_material = new THREE.MeshBasicMaterial({
 	color:Math.random() * 0xffffff
@@ -56,10 +62,10 @@ new THREE.MeshNormalMaterial(
 var scene = 
 new THREE.Scene(
 );
-var  = 
+var camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
-                .position.z = 1000;
+                camera_1.position.z = 1000;
 var light = 
 new THREE.DirectionalLight(
 1677);
@@ -101,20 +107,63 @@ new THREE.Sphere(
 				scene.addObject(container);
                 sphere_1.position.x = -400;
                 sphere_1.position.y = 400;
-                application.foo = "qwerty";
-                application.s = 255;
-                application.hi = null;
-	application.add = function(a,b) 
-	{
-		this.s = a + b;
-	};
-	document.addEventListener( 'click', click_application, false );
-	function click_application (event)
+                application.is_shift_down = false;
+                application.is_ctrl_down = false;
+                application.theta = 45;
+                application.mouse_x = null;
+                application.mouse_y = null;
+	document.addEventListener( 'mousemove', mousemove_application, false );
+	function mousemove_application (event)
 	{
 	var x = event.clientX;
 	var y = event.clientY;
-		application.foo = application.foo + " keyboard";
+		application.mouse_x = x / window.innerWidth * 2 - 1;
+application.mouse_y = -(y / window.innerHeight) * 2 + 1;
+if (application.is_shift_down)
+{
+container.rotation.x += 0.0199999996;
+container.rotation.y += 0.0199999996;
+container.rotation.z += 0.0199999996;
+}
+else
+{
+if (application.is_ctrl_down)
+{
+}
+else
+{
+cylinder_1.rotation.x += 0.0199999996;
+cylinder_1.rotation.y += 0.0199999996;
+cylinder_1.rotation.z += 0.0199999996;
+}
+}
 	};
+	document.addEventListener( 'keydown', keydown_application, false );
+	function keydown_application (event)
+	{   
+	var key_code = event.keyCode;
+			if (key_code == 16)
+{
+application.is_shift_down = true;
+}
+if (key_code == 17)
+{
+application.is_ctrl_down = true;
+}
+	}
+	document.addEventListener( 'keyup', keyup_application, false );
+	function keyup_application (event)
+	{   
+	var key_code = event.keyCode;
+			if (key_code == 16)
+{
+application.is_shift_down = false;
+}
+if (key_code == 17)
+{
+application.is_ctrl_down = false;
+}
+	}
 if (application.init)
 {
 	application.init();
