--- a/xss/production/test/cameras.html
+++ b/xss/production/test/cameras.html
@@ -32,6 +32,8 @@ var threejs_models =
         [
         ];
 var application = {};
+// --------RESOURCES---------
+// --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( window.innerWidth, window.innerHeight );
