--- a/xss/production/test/model_1.html
+++ b/xss/production/test/model_1.html
@@ -34,6 +34,8 @@ var threejs_models =
 			{id:'male_model',src:'model/male02/Male02_slim.js'},
         ];
 var application = {};
+// --------RESOURCES---------
+// --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( window.innerWidth, window.innerHeight );
