--- a/xss/production/test/3js3.html
+++ b/xss/production/test/3js3.html
@@ -37,6 +37,8 @@ var application = {};
         {
             return a + (b - a)*t;
         }
+	// --------RESOURCES---------
+// --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( window.innerWidth, window.innerHeight );
